package com.rj.protos.mobile;

message MobileAdRequest {
  optional string id = 1;
  required string aid = 2; //publisher id
  optional string ua = 3; //user agent
  enum TestFlag {
    TRUE = 0;
    FALSE = 1;
  }
  optional TestFlag test = 4;
  optional string version = 5; //sdk version
  optional string longitude = 6; //jing du
  optional string latitude = 7; //wei du
  optional string adspaceStrict = 8; //if the ad space is strict
  optional string adspaceWidth = 9; //ad space width
  optional string adspaceHeight = 10; //ad space height
  enum Type {
    BANNER = 0;
    VAD = 1;
    NATIVE = 2;
  }
  optional Type type = 11; // ad type   banner, vad, native
  optional string ipAddress = 12; //ip address
  optional string udid = 13; //advertising id
  optional string imei = 14;
  optional string connectionType = 15; //the network
  optional string timestamp = 16; //timestamp
  enum Platform {
    all = 0;
    android = 1;
    ios = 2;
  }
  optional Platform platform = 17; // The platform of the mobile device.
  optional string packageName = 18; //package name
  optional string section = 19; //section
  optional string adCount = 20; //the native ads count requested
  enum SlidingEffect {
    SINGLE = 0;
    SLIDING = 1;
  }
  optional SlidingEffect slidingEffect = 21;
  enum Orientation {
    LANDSCAPE = 0;
    PORTRAIT = 1;
  }
  optional Orientation orientation = 22;

  optional string dnsIp = 23; // from nginx
  message Device {
    optional string vender = 1;
    optional string modelName = 2;
    optional string marketingName = 3;
    optional string screenWidth = 4;
    optional string screenHeight = 5;
    optional string density = 6;
  }
  optional Device device = 24;

  message User {
    optional string uid = 1;
    enum Gender {
      MALE = 0;
      FEMALE = 1;
    }
    optional Gender gender = 2;
    optional string Age = 3;
    optional string countryCode = 4;
    optional string region = 5;
    optional string city = 6;
  }
  optional User user = 25;

  optional string wifiMac = 26; // WIFI MAC address
  optional string bluetoothMac = 27; // Bluetooth MAC address
  optional string simSerialNumber = 28; // SIM card serial number (exclude CDMA)
  optional string androidId = 29; // one user in one android system is unique
  optional string deviceSerialNumber = 30; // device serial number
  optional string cpuSerialNumber = 31; // CPU serial number
}

